--- a/ru_RU/Development/ScriptAPI/i18n.md
+++ b/ru_RU/Development/ScriptAPI/i18n.md
@@ -1,5 +1,8 @@
+<!-- translated -->
+<!-- by shishkevichd -->
+
 ## 🛫 Internationalization API
 
-The following APIs add multi-language support and other related capabilities to the script, which is convenient for plugins to adapt to different languages.
+Следующее API добавляют поддержку нескольких языков и другие связанные возможности к сценарию, что удобно для плагинов для адаптации к разным языкам.
 
-#### The interface here is under design, so stay tuned
+#### API в разработке.
