ворк: восстановление некоторых переводов

--- a/Development/ScriptAPI/i18n.md
+++ b/Development/ScriptAPI/i18n.md
@@ -1,5 +1,8 @@
-## 🛫 Internationalization API
+<!-- translated -->
+<!-- by shishkevichd -->
 
-The following APIs add multi-language support and other related capabilities to the script, which is convenient for plugins to adapt to different languages.
+## 🛫 API интернационализации
 
-#### The interface here is under design, so stay tuned
+Следующее API добавляют поддержку нескольких языков и другие связанные возможности к сценарию, что удобно для плагинов, адаптирующихся к разным языкам.
+
+#### API в разработке.
